Fix logo alignment

--- a/css/scss/pages/_layout.scss
+++ b/css/scss/pages/_layout.scss
@@ -55,7 +55,8 @@
 }
 
 .logo-svg {
-  height: 100%;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 
